Correction bug cursor hover scrollbar

--- a/css/cursor.css
+++ b/css/cursor.css
@@ -1,1 +1,71 @@
-body{cursor:none}.cursor{width:20px;height:20px;border:1px solid #40916c;border-radius:50%;position:absolute;transition-timing-function:ease-out;animation:cursorAnim 1s infinite alternate;pointer-events:none;z-index:99999}.cursor::before{content:"";position:absolute;top:50%;left:50%;transform:translate(-50%,-50%);width:10px;height:10px;background:#fff;border-radius:50%;transition-duration:.2s}.cursor::after{content:"";width:20px;height:20px;position:absolute;border:8px solid #95d5b2;border-radius:50%;opacity:.5;top:-8px;left:-8px;animation:cursorAnim2 1s infinite alternate;z-index:99999}@keyframes cursorAnim{from{transform:scale(1)}to{transform:scale(.7)}}@keyframes cursorAnim2{from{transform:scale(1)}to{transform:scale(.4)}}@keyframes cursorAnim3{0%{transform:scale(1)}50%{transform:scale(1.5)}100%{transform:scale(1);opacity:0}}.expand{animation:cursorAnim3 .5s forwards;border:1px solid #fff}
+body {
+    cursor: none;
+}
+.cursor {
+    width: 20px;
+    height: 20px;
+    border: 1px solid #40916c;
+    border-radius: 50%;
+    position: fixed;
+    transition-timing-function: ease-out;
+    animation: cursorAnim 1s infinite alternate;
+    pointer-events: none;
+    z-index: 99999999;
+}
+.cursor::before {
+    content: "";
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 10px;
+    height: 10px;
+    background: #fff;
+    border-radius: 50%;
+    transition-duration: 0.2s;
+}
+.cursor::after {
+    content: "";
+    width: 20px;
+    height: 20px;
+    position: fixed;
+    border: 8px solid #95d5b2;
+    border-radius: 50%;
+    opacity: 0.5;
+    top: -8px;
+    left: -8px;
+    animation: cursorAnim2 1s infinite alternate;
+    z-index: 99999999;
+}
+@keyframes cursorAnim {
+    from {
+        transform: scale(1);
+    }
+    to {
+        transform: scale(0.7);
+    }
+}
+@keyframes cursorAnim2 {
+    from {
+        transform: scale(1);
+    }
+    to {
+        transform: scale(0.4);
+    }
+}
+@keyframes cursorAnim3 {
+    0% {
+        transform: scale(1);
+    }
+    50% {
+        transform: scale(1.5);
+    }
+    100% {
+        transform: scale(1);
+        opacity: 0;
+    }
+}
+.expand {
+    animation: cursorAnim3 0.5s forwards;
+    border: 1px solid #fff;
+}
